--- a/doc/20250824.v0.0.1.TODO.md
+++ b/doc/20250824.v0.0.1.TODO.md
@@ -35,7 +35,7 @@
 
 - [x] **1.1. 初始化项目:** 创建一个空 Android 项目。
 	- [x] 验证项目初始化，跑通Android Studio里的编译->调试流程
-		- 成功：![](pic/2025-08-23-14-33-19.png)
+		- 成功：![](../pic/2025-08-23-14-33-19.png)
 	- [x] 确认是否包含Jetpack Compose
 - [x] **1.2. 定义核心数据模型:** 仅创建 `Asset` 数据类。
 - [x] **1.3. 创建UI和ViewModel:**
